Add integration tests